--- a/style.css
+++ b/style.css
@@ -6,10 +6,22 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(45deg, #ff0066, #ffcc00, #66ccff);
+    background: linear-gradient(45deg, #6a0dad, #1e90ff, #6a0dad);
     background-size: 400% 400%;
     animation: gradientAnimation 10s ease infinite;
     color: white;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 #xmb-container {
@@ -54,16 +66,4 @@ body {
 
 #config-options label {
     margin-right: 10px;
-}
-
-@keyframes gradientAnimation {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
 }
